# gemmit

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  devshell.nix  flake.nix  go.mod  go.sum  main.go
assets/: prompt.txt
cmd/: root.go  tui.go
pkg/: README.md  gemmit  package.json
src/: ai.rs  app.rs  cli.rs  config.rs  gemini.rs  git.rs  git_commit.rs  git_diff.rs  handle_input.rs  lib.rs  llm.rs  main.rs  prompt.rs  ui.rs
