[package]
name = "gemmit"
version = "0.1.0"
edition = "2024"
description = "Gemini API wrapper for conventional commit messages"

[dependencies]
colored = "2"
crossterm = "0.28"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
