[package]
name = "gemmit"
version = "0.1.0"
edition = "2024"
description = "Gemini API wrapper for conventional commit messages"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
